@@ -1,5 +1,6 @@
 Revision history for Web::ComposableRequest
 
+          - Adds reset session
           - Added broken smoker
 
 0.15.1    2016-10-02 04:23:39
